--- a/server/views/books/details.ejs
+++ b/server/views/books/details.ejs
@@ -26,6 +26,18 @@
                 <input type="text" class="form-control" id="GenreTextField"
                 placeholder="Book Genre" name="genre" value="<%= books.Genre %>"  required>
               </div>
+              <!-- Description filed was missing here -->
+<div class="form-group">
+  <label for="DescriptionTextField">Description</label>
+  <textarea class="form-control" id="DescriptionTextField"
+  placeholder="Book Description" name="description" required><%= books.Description %></textarea>
+</div>
+<!-- Add fave -->
+<div class="form-group">
+  <label for="FavouriteCheckbox">Favourite</label>
+  <input type="checkbox" id="FavouriteCheckbox" name="favourite" <%= books.Favourite ? 'checked' : '' %> >
+</div>
+
 
               <button type="submit" class="btn btn-primary"><i class="fa fa-check-square-o"></i> Submit</button>
               <a href="/books" class="btn btn-warning"><i class="fa fa-undo"></i> Cancel</a>
