--- a/server/views/books/index.ejs
+++ b/server/views/books/index.ejs
@@ -5,21 +5,22 @@
       <div class="row">
         <div class="col-md-offset-1 col-md-10">
           <h3>Favourite Books List </h3>
-          <!-- ------------------------ -->
-          <!-- FIX THE ADD BUTTON BELOW -->
-          <!-- ------------------------ -->
-      <a href="/books/add" class="btn btn-primary"><i class="fa fa-plus"></i> Add a book</a>
+          <!--   -->
+               <a href="/books/add" class="btn btn-primary"><i class="fa fa-plus"></i> Add a book</a>
           <br>
           <div class="table-responsive">
             <table class="table table-bordered table-striped table-hover">
               <thead>
                 <tr>
                   <th>Title</th>
+                  <th class="text-center">Description</th>
                   <th class="text-center">Price</th>
                   <th class="text-center">Author</th>
                   <th class="text-center">Genre</th>
-                  <th class="text-center"></th>
-                  <th class="text-center"></th>
+                  <th class="text-center">Edit</th>
+                  <th class="text-center">Delete</th>
+                  <th class="text-center">Favourite</th>
+
                 </tr>
                 </thead>
                 <tbody>
@@ -27,9 +28,11 @@
                 <% for (let count = 0; count < books.length; count++) { %>
                 <tr>
                   <td><%= books[count].Title %></td>
+                  <td class="text-center"><%= books[count].Description %></td> 
                   <td class="text-center">$<%= books[count].Price %></td>
                   <td class="text-center"><%= books[count].Author %></td>
                   <td class="text-center"><%= books[count].Genre %></td>
+                 
 
                   <td class="text-center">
                     <a href="/books/<%= books[count]._id %>" class="btn btn-success"><i class="fa fa-edit"></i> Edit</a>
@@ -38,6 +41,13 @@
 
                   <td class="text-center">
                     <a href="/books/delete/<%= books[count]._id %>" class="btn btn-danger"><i class="fa fa-trash"></i> Delete</a>
+                  </td>
+                  <!-- Added favourite button -->
+                  <!-- i used a tag before then i reliezed the standard method for this is button  -->
+                  <td class="text-center">
+                    <form action="/books/favourite/<%= books[count]._id %>" method="POST">
+                      <button type="submit" class="btn btn-<%= books[count].Favourite ? 'danger' : 'secondary' %>"><i class="fa fa-heart"></i></button>
+                    </form>
                   </td>
                 </tr>
                 <% } %>
